--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,15 @@
 
 } 
 
+.navbar {
+    z-index: 1020;
+    position: fixed; 
+    top: 0;         
+    left: 0;        
+}
+
 /* Header *
 }
- 
 
 /* Body */
 
